--- a/lectures/c++/05_error_handling/Makefile
+++ b/lectures/c++/05_error_handling/Makefile
@@ -40,4 +40,7 @@ clean:
 05_stack_unwinding.x: ap_error.h
 06_smart_pointers.x: ap_error.h
 
+
+#04_assert.x: CXXFLAGS += -DNDEBUG
+
 format: ap_error.h
