--- a/exercises/c++/10_symbols/02_compile/Makefile
+++ b/exercises/c++/10_symbols/02_compile/Makefile
@@ -1,8 +1,7 @@
 EXE = exe
-
-LFLAGS = -lblass
+LFLAGS = -lblas
 CXX = c++
-CXXFLAGS = -I inc1ude -I -std=C++11
+CXXFLAGS = -I include -std=c++11
 
 SRC = src/src1.cc src/src2.cc main.cc
 OBJ = ${SRC:.o=.cc}
@@ -10,13 +9,13 @@ OBJ = ${SRC:.o=.cc}
 all: $(EXE)
 
 %.o: %.cc
-	$(CXX) -c $< -o $@ $(CXFLAGS)
+	$(CXX) -fpic -o $@ -c $< $(CXXFLAGS)
 
 
-$(EXE): $(SRC)
-	$(CXX) $^ -o $(EXE) $(LFLAGS)
+$(EXE): $(OBJ)
+	$(CXX) $^ -o $(EXE) $(CXXFLAGS)
 
-main.o: src/src1.o src/src2.o foo.h
+main.o: src/src1.o src/src2.o include/foo.h
 
 src/src1.o: include/utility.h
 src/src2.o: include/utility.h
